# onlook-clone

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  Gemfile
api/app/models/: element.rb
api/app/serializers/: element_serializer.rb
api/app/services/: diff_engine_notifier.rb
api/config/: application.rb  ci.rb  credentials.yml.enc  database.yml  deploy.yml  routes.rb
api/db/: schema.rb  seeds.rb
api/db/migrate/: 20260307000002_create_elements.rb  20260307000003_create_element_histories.rb
engine/: .gitignore  Dockerfile  go.mod
engine/cmd/server/: main.go
engine/internal/diff/: engine.go
engine/internal/handlers/: webhook.go
engine/internal/publisher/: phoenix.go
frontend/: Dockerfile  package-lock.json  package.json  vite-plugin-wasm-pack.ts  vite.config.ts
frontend/src/: app.css
frontend/src/lib/components/: Canvas.svelte  CanvasElement.svelte  DimensionLabel.svelte  LayerPanel.svelte  PropertiesPanel.svelte  (+3 more)
frontend/src/routes/: +page.svelte
realtime/: .gitignore  Dockerfile  mix.exs
realtime/config/: config.exs  dev.exs  prod.exs  runtime.exs
realtime/lib/: realtime_web.ex
realtime/lib/realtime/: application.ex
realtime/lib/realtime_web/: endpoint.ex  router.ex  user_socket.ex
wasm/: Cargo.toml
wasm/crates/diff/: Cargo.toml
wasm/crates/diff/src/: lib.rs
wasm/crates/geom/: Cargo.toml
wasm/crates/geom/src/: lib.rs
wasm/crates/render/: Cargo.toml
wasm/crates/render/src/: lib.rs
wasm/crates/render/src/shaders/: grid.wgsl
wasm/crates/spatial/: Cargo.toml
wasm/crates/spatial/src/: lib.rs
(+23 files in other folders)
