[workspace]
resolver = "2"
members = [
    "crates/geom",
    "crates/spatial",
    "crates/diff",
    "crates/render",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
